# internal/auth.go
@@ -2,8 +2,15 @@ package model
 
 import "github.com/gin-gonic/gin"
 
-// AuthToken holds authentication token details
+// AuthToken holds authentication token details with refresh token
 type AuthToken struct {
+	Token        string `json:"token"`
+	Expires      string `json:"expires"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+// RefreshToken holds authentication token details
+type RefreshToken struct {
 	Token   string `json:"token"`
 	Expires string `json:"expires"`
 }
